# CMakeLearn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
01_create_window/: CMakeLists.txt  main.ixx  stdafx.h
01_create_window/base/: shader.ixx
3rd/: CMakeLists.txt
3rd/glfw/: CMakeLists.txt
Base/: CMakeLists.txt  camera.h  shader.h  stdafx.h
Src/: CMakeLists.txt
Src/00_QuickStart/: CMakeLists.txt  main.cpp
Src/01_HelloWindow/: CMakeLists.txt  main.cpp
Src/02_Triangle/: CMakeLists.txt
Src/03_Textures/: CMakeLists.txt  main.cpp
Src/04_Camera/: CMakeLists.txt  main.cpp
Src/05_Light/: CMakeLists.txt  main.cpp
Src/06_LightCasters/: CMakeLists.txt  main.cpp  multiple_lights.cpp
Src/06_LightCasters/Resources/Shaders/: color.frag  color.vert
Src/07_Model/: CMakeLists.txt  main.cpp  mesh.h  model.h
ThirdPart/: CMakeLists.txt
ThirdPart/glad/: CMakeLists.txt
ThirdPart/glm/: CMakeLists.txt
ThirdPart/stb_image/: CMakeLists.txt
simple_test/: CMakeLists.txt  shader.ixx
